added langgraph framework and langfuse for debugging

--- a/rag-chatbot/.env.apiKey
+++ b/rag-chatbot/.env.apiKey
@@ -1,4 +1,9 @@
 TOGETHER_API_KEY= "API key here"
+BFH_LLM_API_KEY="API key here"
+
+LANGFUSE_SECRET_KEY = "API key here"
+LANGFUSE_PUBLIC_KEY = "API key here"
+LANGFUSE_BASE_URL = "https://cloud.langfuse.com"
 
 CHROMA_HOST=chroma
 CHROMA_PORT=8000
